src/libguac/guacamole/client.h


typedef struct guac_client_internal guac_client_internal;
struct guac_client {
    guac_socket* socket;
    guac_socket* pending_socket;
    guac_client_state state;
    void* data;
    guac_timestamp last_sent_timestamp;
    guac_client_free_handler* free_handler;
    guac_client_log_handler* log_handler;
    guac_pool* __buffer_pool;
    guac_pool* __layer_pool;
    guac_pool* __stream_pool;
    guac_stream* __output_streams;
    char* connection_id;
    guac_rwlock __users_lock;
    guac_user* __users;
    guac_rwlock __pending_users_lock;
    timer_t __pending_users_timer;
    int __pending_users_timer_state;
    pthread_mutex_t __pending_users_timer_mutex;
    guac_user* __pending_users;
    guac_user* __owner;
    int connected_users;
    guac_user_join_handler* join_handler;
    guac_client_join_pending_handler* join_pending_handler;
    guac_user_leave_handler* leave_handler;
    const char** args;
    void* __plugin_handle;
    guac_client_internal* internal;
};
guac_client* guac_client_alloc();
void guac_client_free(guac_client* client);
void guac_client_log(guac_client* client, guac_client_log_level level,
        const char* format, ...);
void vguac_client_log(guac_client* client, guac_client_log_level level,
        const char* format, va_list ap);
void guac_client_stop(guac_client* client);
void guac_client_abort(guac_client* client, guac_protocol_status status,
        const char* format, ...);
void vguac_client_abort(guac_client* client, guac_protocol_status status,
        const char* format, va_list ap);
guac_layer* guac_client_alloc_buffer(guac_client* client);
guac_layer* guac_client_alloc_layer(guac_client* client);
void guac_client_free_buffer(guac_client* client, guac_layer* layer);
void guac_client_free_layer(guac_client* client, guac_layer* layer);
guac_stream* guac_client_alloc_stream(guac_client* client);
void guac_client_free_stream(guac_client* client, guac_stream* stream);