python/guacd/ctypes_wrapper.py


# /opt/guacamole/include/guacamole/socket.h: 178
if _libs["libguacd"].has("guac_socket_open", "cdecl"):
    guac_socket_open = _libs["libguacd"].get("guac_socket_open", "cdecl")
    guac_socket_open.argtypes = [c_int]
    guac_socket_open.restype = POINTER(guac_socket)

# /opt/guacamole/include/guacamole/socket.h: 202
if _libs["libguacd"].has("guac_socket_nest", "cdecl"):
    guac_socket_nest = _libs["libguacd"].get("guac_socket_nest", "cdecl")
    guac_socket_nest.argtypes = [POINTER(guac_socket), c_int]
    guac_socket_nest.restype = POINTER(guac_socket)

# /opt/guacamole/include/guacamole/socket.h: 234
if _libs["libguacd"].has("guac_socket_tee", "cdecl"):
    guac_socket_tee = _libs["libguacd"].get("guac_socket_tee", "cdecl")
    guac_socket_tee.argtypes = [POINTER(guac_socket), POINTER(guac_socket)]
    guac_socket_tee.restype = POINTER(guac_socket)

# /opt/guacamole/include/guacamole/socket.h: 260
if _libs["libguacd"].has("guac_socket_broadcast", "cdecl"):
    guac_socket_broadcast = _libs["libguacd"].get("guac_socket_broadcast", "cdecl")
    guac_socket_broadcast.argtypes = [POINTER(guac_client)]
    guac_socket_broadcast.restype = POINTER(guac_socket)

# /opt/guacamole/include/guacamole/socket.h: 286
if _libs["libguacd"].has("guac_socket_broadcast_pending", "cdecl"):
    guac_socket_broadcast_pending = _libs["libguacd"].get("guac_socket_broadcast_pending", "cdecl")
    guac_socket_broadcast_pending.argtypes = [POINTER(guac_client)]
    guac_socket_broadcast_pending.restype = POINTER(guac_socket)

# /opt/guacamole/include/guacamole/socket.h: 300
if _libs["libguacd"].has("guac_socket_write_int", "cdecl"):
    guac_socket_write_int = _libs["libguacd"].get("guac_socket_write_int", "cdecl")
    guac_socket_write_int.argtypes = [POINTER(guac_socket), c_int64]
    guac_socket_write_int.restype = c_ptrdiff_t

# /opt/guacamole/include/guacamole/socket.h: 314
if _libs["libguacd"].has("guac_socket_write_string", "cdecl"):
    guac_socket_write_string = _libs["libguacd"].get("guac_socket_write_string", "cdecl")
    guac_socket_write_string.argtypes = [POINTER(guac_socket), String]
    guac_socket_write_string.restype = c_ptrdiff_t

# /opt/guacamole/include/guacamole/socket.h: 332
if _libs["libguacd"].has("guac_socket_write_base64", "cdecl"):
    guac_socket_write_base64 = _libs["libguacd"].get("guac_socket_write_base64", "cdecl")
    guac_socket_write_base64.argtypes = [POINTER(guac_socket), POINTER(None), c_size_t]
    guac_socket_write_base64.restype = c_ptrdiff_t

# /opt/guacamole/include/guacamole/socket.h: 346
if _libs["libguacd"].has("guac_socket_write", "cdecl"):
    guac_socket_write = _libs["libguacd"].get("guac_socket_write", "cdecl")
    guac_socket_write.argtypes = [POINTER(guac_socket), POINTER(None), c_size_t]
    guac_socket_write.restype = c_ptrdiff_t

# /opt/guacamole/include/guacamole/socket.h: 361
if _libs["libguacd"].has("guac_socket_read", "cdecl"):
    guac_socket_read = _libs["libguacd"].get("guac_socket_read", "cdecl")
    guac_socket_read.argtypes = [POINTER(guac_socket), POINTER(None), c_size_t]
    guac_socket_read.restype = c_ptrdiff_t

# /opt/guacamole/include/guacamole/socket.h: 372
if _libs["libguacd"].has("guac_socket_flush_base64", "cdecl"):
    guac_socket_flush_base64 = _libs["libguacd"].get("guac_socket_flush_base64", "cdecl")
    guac_socket_flush_base64.argtypes = [POINTER(guac_socket)]
    guac_socket_flush_base64.restype = c_ptrdiff_t

# /opt/guacamole/include/guacamole/socket.h: 383
if _libs["libguacd"].has("guac_socket_flush", "cdecl"):
    guac_socket_flush = _libs["libguacd"].get("guac_socket_flush", "cdecl")
    guac_socket_flush.argtypes = [POINTER(guac_socket)]
    guac_socket_flush.restype = c_ptrdiff_t

# /opt/guacamole/include/guacamole/socket.h: 401
if _libs["libguacd"].has("guac_socket_select", "cdecl"):
    guac_socket_select = _libs["libguacd"].get("guac_socket_select", "cdecl")
    guac_socket_select.argtypes = [POINTER(guac_socket), c_int]
    guac_socket_select.restype = c_int

# /opt/guacamole/include/guacamole/stream-types.h: 32
class struct_guac_stream(Structure):
    pass

guac_stream = struct_guac_stream# /opt/guacamole/include/guacamole/stream-types.h: 32

# /opt/guacamole/include/guacamole/user-types.h: 33
class struct_guac_user(Structure):
    pass

guac_user = struct_guac_user# /opt/guacamole/include/guacamole/user-types.h: 33

guac_user_callback = CFUNCTYPE(UNCHECKED(POINTER(c_ubyte)), POINTER(guac_user), POINTER(None))# /opt/guacamole/include/guacamole/user-fntypes.h: 59

guac_user_join_handler = CFUNCTYPE(UNCHECKED(c_int), POINTER(guac_user), c_int, POINTER(POINTER(c_char)))# /opt/guacamole/include/guacamole/user-fntypes.h: 411

guac_user_leave_handler = CFUNCTYPE(UNCHECKED(c_int), POINTER(guac_user))# /opt/guacamole/include/guacamole/user-fntypes.h: 430

guac_client_free_handler = CFUNCTYPE(UNCHECKED(c_int), POINTER(guac_client))# /opt/guacamole/include/guacamole/client-fntypes.h: 51

guac_client_join_pending_handler = CFUNCTYPE(UNCHECKED(c_int), POINTER(guac_client))# /opt/guacamole/include/guacamole/client-fntypes.h: 65

guac_client_log_handler = CFUNCTYPE(UNCHECKED(None), POINTER(guac_client), guac_client_log_level, String, c_void_p)# /opt/guacamole/include/guacamole/client-fntypes.h: 83

# /opt/guacamole/include/guacamole/layer-types.h: 32
class struct_guac_layer(Structure):
    pass

guac_layer = struct_guac_layer# /opt/guacamole/include/guacamole/layer-types.h: 32

# /opt/guacamole/include/guacamole/pool-types.h: 40
class struct_guac_pool(Structure):
    pass

guac_pool = struct_guac_pool# /opt/guacamole/include/guacamole/pool-types.h: 40

# /opt/guacamole/include/guacamole/rwlock.h: 62
class struct_guac_rwlock(Structure):
    pass

struct_guac_rwlock.__slots__ = [
    'lock',
    'key',
]
struct_guac_rwlock._fields_ = [
    ('lock', pthread_rwlock_t),
    ('key', pthread_key_t),
]

guac_rwlock = struct_guac_rwlock# /opt/guacamole/include/guacamole/rwlock.h: 62

# /usr/include/cairo/cairo.h: 164
class struct__cairo_surface(Structure):
    pass

cairo_surface_t = struct__cairo_surface# /usr/include/cairo/cairo.h: 164

struct_guac_client.__slots__ = [
    'socket',
    'pending_socket',
    'state',
    'data',
    'last_sent_timestamp',
    'free_handler',
    'log_handler',
    '__buffer_pool',
    '__layer_pool',
    '__stream_pool',
    '__output_streams',
    'connection_id',
    '__users_lock',
    '__users',
    '__pending_users_lock',
    '__pending_users_timer',
    '__pending_users_timer_state',
    '__pending_users_timer_mutex',
    '__pending_users',
    '__owner',
    'connected_users',
    'join_handler',
    'join_pending_handler',
    'leave_handler',
    'args',
    '__plugin_handle',
]
struct_guac_client._fields_ = [
    ('socket', POINTER(guac_socket)),
    ('pending_socket', POINTER(guac_socket)),
    ('state', guac_client_state),
    ('data', POINTER(None)),
    ('last_sent_timestamp', guac_timestamp),
    ('free_handler', POINTER(guac_client_free_handler)),
    ('log_handler', POINTER(guac_client_log_handler)),
    ('__buffer_pool', POINTER(guac_pool)),
    ('__layer_pool', POINTER(guac_pool)),
    ('__stream_pool', POINTER(guac_pool)),
    ('__output_streams', POINTER(guac_stream)),
    ('connection_id', String),
    ('__users_lock', guac_rwlock),
    ('__users', POINTER(guac_user)),
    ('__pending_users_lock', guac_rwlock),
    ('__pending_users_timer', timer_t),
    ('__pending_users_timer_state', c_int),
    ('__pending_users_timer_mutex', pthread_mutex_t),
    ('__pending_users', POINTER(guac_user)),
    ('__owner', POINTER(guac_user)),
    ('connected_users', c_int),
    ('join_handler', POINTER(guac_user_join_handler)),
    ('join_pending_handler', POINTER(guac_client_join_pending_handler)),
    ('leave_handler', POINTER(guac_user_leave_handler)),
    ('args', POINTER(POINTER(c_char))),
    ('__plugin_handle', POINTER(None)),
]

# /opt/guacamole/include/guacamole/client.h: 325
if _libs["libguacd"].has("guac_client_alloc", "cdecl"):
    guac_client_alloc = _libs["libguacd"].get("guac_client_alloc", "cdecl")
    guac_client_alloc.argtypes = []
    guac_client_alloc.restype = POINTER(guac_client)

# /opt/guacamole/include/guacamole/client.h: 332
if _libs["libguacd"].has("guac_client_free", "cdecl"):
    guac_client_free = _libs["libguacd"].get("guac_client_free", "cdecl")
    guac_client_free.argtypes = [POINTER(guac_client)]
    guac_client_free.restype = None

# /opt/guacamole/include/guacamole/client.h: 344
if _libs["libguacd"].has("guac_client_log", "cdecl"):
    _func = _libs["libguacd"].get("guac_client_log", "cdecl")
    _restype = None
    _errcheck = None
    _argtypes = [POINTER(guac_client), guac_client_log_level, String]
    guac_client_log = _variadic_function(_func,_restype,_argtypes,_errcheck)

# /opt/guacamole/include/guacamole/client.h: 358
if _libs["libguacd"].has("vguac_client_log", "cdecl"):
    vguac_client_log = _libs["libguacd"].get("vguac_client_log", "cdecl")
    vguac_client_log.argtypes = [POINTER(guac_client), guac_client_log_level, String, c_void_p]
    vguac_client_log.restype = None

# /opt/guacamole/include/guacamole/client.h: 368
if _libs["libguacd"].has("guac_client_stop", "cdecl"):
    guac_client_stop = _libs["libguacd"].get("guac_client_stop", "cdecl")
    guac_client_stop.argtypes = [POINTER(guac_client)]
    guac_client_stop.restype = None

# /opt/guacamole/include/guacamole/client.h: 381
if _libs["libguacd"].has("guac_client_abort", "cdecl"):
    _func = _libs["libguacd"].get("guac_client_abort", "cdecl")
    _restype = None
    _errcheck = None
    _argtypes = [POINTER(guac_client), guac_protocol_status, String]
    guac_client_abort = _variadic_function(_func,_restype,_argtypes,_errcheck)

# /opt/guacamole/include/guacamole/client.h: 396
if _libs["libguacd"].has("vguac_client_abort", "cdecl"):
    vguac_client_abort = _libs["libguacd"].get("vguac_client_abort", "cdecl")
    vguac_client_abort.argtypes = [POINTER(guac_client), guac_protocol_status, String, c_void_p]
    vguac_client_abort.restype = None

# /opt/guacamole/include/guacamole/client.h: 406
if _libs["libguacd"].has("guac_client_alloc_buffer", "cdecl"):
    guac_client_alloc_buffer = _libs["libguacd"].get("guac_client_alloc_buffer", "cdecl")
    guac_client_alloc_buffer.argtypes = [POINTER(guac_client)]
    guac_client_alloc_buffer.restype = POINTER(guac_layer)

# /opt/guacamole/include/guacamole/client.h: 415
if _libs["libguacd"].has("guac_client_alloc_layer", "cdecl"):
    guac_client_alloc_layer = _libs["libguacd"].get("guac_client_alloc_layer", "cdecl")
    guac_client_alloc_layer.argtypes = [POINTER(guac_client)]
    guac_client_alloc_layer.restype = POINTER(guac_layer)

# /opt/guacamole/include/guacamole/client.h: 424
if _libs["libguacd"].has("guac_client_free_buffer", "cdecl"):
    guac_client_free_buffer = _libs["libguacd"].get("guac_client_free_buffer", "cdecl")
    guac_client_free_buffer.argtypes = [POINTER(guac_client), POINTER(guac_layer)]
    guac_client_free_buffer.restype = None

# /opt/guacamole/include/guacamole/client.h: 433
if _libs["libguacd"].has("guac_client_free_layer", "cdecl"):
    guac_client_free_layer = _libs["libguacd"].get("guac_client_free_layer", "cdecl")
    guac_client_free_layer.argtypes = [POINTER(guac_client), POINTER(guac_layer)]
    guac_client_free_layer.restype = None

# /opt/guacamole/include/guacamole/client.h: 446
if _libs["libguacd"].has("guac_client_alloc_stream", "cdecl"):
    guac_client_alloc_stream = _libs["libguacd"].get("guac_client_alloc_stream", "cdecl")
    guac_client_alloc_stream.argtypes = [POINTER(guac_client)]
    guac_client_alloc_stream.restype = POINTER(guac_stream)

# /opt/guacamole/include/guacamole/client.h: 458
if _libs["libguacd"].has("guac_client_free_stream", "cdecl"):
    guac_client_free_stream = _libs["libguacd"].get("guac_client_free_stream", "cdecl")
    guac_client_free_stream.argtypes = [POINTER(guac_client), POINTER(guac_stream)]
    guac_client_free_stream.restype = None
